operation getComments now allows sortOrder
