# src/main/resources/openapi/controller/springcityexplorer.yaml
@@ -94,6 +94,12 @@ paths:
             type: integer
             default: 0
           description: Use this parameter to specify a pagination offset value for your API request.
+        - name: sortOrder
+          in: query
+          schema:
+            type: string
+            enum: ["asc","desc"]
+          description: Use this parameter to specify a pagination timestamp order value for your API request.
       responses:
         '200':
           description: A list of comments
